--- a/RockCluster/RockCluster/RockCluster.vcxproj
+++ b/RockCluster/RockCluster/RockCluster.vcxproj
@@ -79,10 +79,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AlertData.h" />
+    <ClInclude Include="rock.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="rock.cpp" />
     <ClCompile Include="RockCluster.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
