--- a/RockCluster/RockCluster/RockCluster.vcxproj.filters
+++ b/RockCluster/RockCluster/RockCluster.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="rock.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="AlertData.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
